--- a/css/display_table.css
+++ b/css/display_table.css
@@ -1,3 +1,13 @@
+.display-block {
+  font-family: 'Kalam';
+  background-image: linear-gradient(to bottom, #F3F3F3, #BCDAFF);
+  border-radius: 10px; /* Rounded corners */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  font-size: 18pt;
+  margin-bottom: 5px;
+}
+
 .display-table {
   font-family: 'Kalam', sans-serif;
   font-size: 12pt;
