--- a/css/main.css
+++ b/css/main.css
@@ -18,16 +18,24 @@ h1 {
   
 /* Styles for heading 2 */
 h2 {
-  font-size: 16pt;
+  font-size: 18pt;
   color: #53006c;
   padding-top: 2px;
+  margin-bottom: 4px;
+} 
+
+h3 {
+  font-size: 14pt;
+  color: #5C8FB5;
+  padding-top: 2px;
+  padding-left: 1em;
   margin-bottom: 4px;
 } 
   
 /* General paragraph styles */
 p {
-  padding-left: 15px;
-  padding-right: 10px;
+  padding-left: 2em;
+  padding-right: 15px;
 }   
   
 /* Body styles */
@@ -55,7 +63,12 @@ td {
   }
 
   h2 {
-   font-size: 32pt;
+    font-size: 32pt;
   }
+
+  h3 {
+    font-size: 28pt;
+  } 
   
 }
+
