--- a/css/article.css
+++ b/css/article.css
@@ -44,7 +44,10 @@
   border-bottom: 1px solid #53006c;
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) and (max-width: 1280px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) and (max-width: 1280px) {
+  .article {
+    padding-bottom: 21px;
+  }
   .article h1 {
     font-size: 24pt;
   }
