--- a/css/technology/projects.css
+++ b/css/technology/projects.css
@@ -31,3 +31,18 @@
       transform: scale(0.2); /* Adjust the scale factor as needed */
       transform-origin: 0 0; /* Set the origin of the scaling */
 }
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .code-block pre {
+    width: 90%;
+    line-height: .5;
+    overflow-x: auto;
+    overflow-y: auto;
+  {
+
+  .code-block code {
+    line-height: .5;
+    overflow-x: auto;
+    overflow-y: auto;
+  }
+}
